[package]
name = "ChugtaiLibraryDownloader"
version = "1.0.0"
edition = "2021"
authors = ["Taha", "Hashir"]

[dependencies]

colored = "2.1.0"
error-chain = "0.12.4"
ftp = "3.0.1"
futures = "0.3.30"
futures-util = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["blocking", "stream"] }
scraper = "0.19.0"
select = "0.6.0"
table-extract = "0.2.3"
tauri = "1.6.8"
tempfile = "3.10.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ureq = "2.9.7"
